test-install/install: Print usage when run without arguments.
The `-z "$INSTALLER"` was intended to do this -- but we don't get that
far, because the `shift` fails.

--- a/tools/test-install/install
+++ b/tools/test-install/install
@@ -16,7 +16,7 @@ while true; do
         *) usage;;
     esac
 done
-INSTALLER="$1"; shift
+INSTALLER="$1"; shift || usage
 INSTALLER_ARGS=("$@"); set --
 
 if [ -z "$RELEASE" ] || [ -z "$INSTALLER" ]; then
